@@ -1,4 +1,4 @@
 DIST 0.1.5.tar.gz 11423 BLAKE2B 150a891f7a996060479ce6d6fafafdf6030d8e307fb4237b9970960521e8ef954bf6ad6c67bfb33442c7c1473369907962dc9b27cdf3a9a74e830841d0659de4 SHA512 2cb0f6e333100670815b501f34433e14b9a28461b782670c40284c94b135d78fc1ecc4f82de464ebb20ae330dbfb474cb0ad05285ed23eaba22ad84fef18e994
-EBUILD milksnake-0.1.5.ebuild 666 BLAKE2B 935d4d0cf10a4620011522402fca2ecce6347942f3aadeab1b6f0093879d70ed9bd9bdc65f11c5efaa80dd0683e521f330673beecf3a3aaaad3789604bd51b56 SHA512 37c1dffe775a0c5fc4d68fba0a9c66baa44bed6ab1038266fc80e446e532e9ecfed02dc9548ec81c99984c0f5bad272c66d7e9dc2c8b80e68a7249ec97dab5c1
-MISC ChangeLog 154 BLAKE2B 892f1e5d08c967a5c7c0aa4b24dcb68881c2bf00f6da665dec742b299c826830a3b0c81db6de97fbcc575e59379dabd319d1dcd7af45e535d64119f8c5cafec3 SHA512 141bece11750cd1979dfce96b20cfdf86a04995ea8fcb12edb744875d9fe1b811b5b14019fc5209a7b870f02ec91d7b27dc82d5f9dba36f16b0f992d6b8ce260
-MISC metadata.xml 769 BLAKE2B 31be798a0c3520b94e08fff71bd7749ea91c0331043ce0ff1a563aeeaefae5ee86f77a8897f91061953d9744c5cfa8e5e212a15f9ca5e6fb425aa28e79af3c93 SHA512 b1480e522722165811421c985980a65b7603bf3a903ef8e97fc6469e3fd1e43faf6672b0b9051c7232c887ebf37b29dc7e8c15466dae07cdca21322c7766af4e
+EBUILD milksnake-0.1.5.ebuild 676 BLAKE2B f1d5523c53d3ebdcb400f78f417d11915fc2efba0e1a953df897a2746262685d8e677405c8719d17895c2e7b03480cfcb2651dce2f36bb49ed4e97c9101bef63 SHA512 7cedfba6c11f98c5649c2752d1f603acf36cdd9c4d4882dbf6208d5ec7ad868d97fcb3fa76fc682a4d5366282f513e374735e476dc69b92dba53a2e2e2e52d29
+MISC ChangeLog 265 BLAKE2B 45f3024e4f70ac3fadda39559f50fb914360544d699264e28ae37d04e84263f79ef3c2d1b8384b3f7589388443849e6223357ba1fcf1dfb03230747617624ade SHA512 930a46dab2180f22193be1243c5fb41ee036817e55203a0b904ad55c77a1a6f11c91024d850dc516c21b3d3bdbd270d46890cc6e891d04d20617fc1bf35d6147
+MISC metadata.xml 882 BLAKE2B 536aca186b8978a08168f019ed96588540d16e36d2a65b34ec09c81ed6abb25f4bc0eed82c833360dfe5399b6a04deae4bf2c75a2564485544ee2c6486afd788 SHA512 ac5153f40501f42fe338a6703c4668061cf116c2af04d71d1e17e4e0e6730cb85bb3916c0e02db74e2b4f73c172703c7622865fb82b9febdf8a8d45bee0a30db
