@@ -1,3 +1,6 @@
+  29 Aug 2019;  <bemeurer@gentoo.org> metadata.xml, milksnake-0.1.5.ebuild:
+  dev-python/milksnake: doc fixes
+
 *milksnake-0.1.5 (29 Aug 2019)
 
   29 Aug 2019;  <bemeurer@gentoo.org> +metadata.xml, +milksnake-0.1.5.ebuild:
